--- a/css/style.css
+++ b/css/style.css
@@ -395,7 +395,7 @@ mark,
 .img-fluid {
   max-width: 100%;
   height: auto; }
-
+.align-middle
 .img-thumbnail {
   padding: 0.25rem;
   background-color: #fff;
